src/test/run-pass/nil-pattern.rs
fn main() { let x = (); match x { () => { } } }
