src/test/compile-fail/bad-match.rs
// error-pattern: expected

fn main() {
  let int x = 5;
  match x;
}
